--- a/orlab/docs/06-tank-utilization.ipynb
+++ b/orlab/docs/06-tank-utilization.ipynb
@@ -421,12 +421,12 @@
        "      <td>95</td>\n",
        "      <td>20</td>\n",
        "      <td>75</td>\n",
-       "      <td>[11, 56]</td>\n",
-       "      <td>67</td>\n",
-       "      <td>87</td>\n",
-       "      <td>0.915789</td>\n",
+       "      <td>[18, 56]</td>\n",
+       "      <td>74</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.989474</td>\n",
        "      <td>1</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -473,13 +473,13 @@
       ],
       "text/plain": [
        "   capacity  max_level  current_level  available_volume expected_demands  \\\n",
-       "0       100         95             20                75         [11, 56]   \n",
+       "0       100         95             20                75         [18, 56]   \n",
        "1       100         95              0                95             [40]   \n",
        "2       100         95             80                15              [2]   \n",
        "3       100         95              0                95               []   \n",
        "\n",
        "   expected_add  new_level  new_utilization  did_add  unused_capacity  \n",
-       "0            67         87         0.915789        1                8  \n",
+       "0            74         94         0.989474        1                1  \n",
        "1            40         40         0.421053        1               55  \n",
        "2             2         82         0.863158        1               13  \n",
        "3             0          0         0.000000        0                0  "
@@ -491,7 +491,7 @@
     }
    ],
    "source": [
-    "expected_demands = [[11,56], [40], [2], []]\n",
+    "expected_demands = [[18,56], [40], [2], []]\n",
     "add_expectations(tanks_df, expected_demands)"
    ]
   },
@@ -500,7 +500,7 @@
    "id": "3803a391",
    "metadata": {},
    "source": [
-    "Now notice if we had instead chosen to put the small `2` demand onto the empty row, the numbers look much different:"
+    "Now notice if we had instead chosen to put the small `2` demand onto the empty row, the `unused_capacity` numbers look much different:"
    ]
   },
   {
@@ -549,12 +549,12 @@
        "      <td>95</td>\n",
        "      <td>20</td>\n",
        "      <td>75</td>\n",
-       "      <td>[11, 56]</td>\n",
-       "      <td>67</td>\n",
-       "      <td>87</td>\n",
-       "      <td>0.915789</td>\n",
+       "      <td>[18, 56]</td>\n",
+       "      <td>74</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.989474</td>\n",
        "      <td>1</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -601,13 +601,13 @@
       ],
       "text/plain": [
        "   capacity  max_level  current_level  available_volume expected_demands  \\\n",
-       "0       100         95             20                75         [11, 56]   \n",
+       "0       100         95             20                75         [18, 56]   \n",
        "1       100         95              0                95             [40]   \n",
        "2       100         95             80                15               []   \n",
        "3       100         95              0                95              [2]   \n",
        "\n",
        "   expected_add  new_level  new_utilization  did_add  unused_capacity  \n",
-       "0            67         87         0.915789        1                8  \n",
+       "0            74         94         0.989474        1                1  \n",
        "1            40         40         0.421053        1               55  \n",
        "2             0         80         0.842105        0                0  \n",
        "3             2          2         0.021053        1               93  "
@@ -619,7 +619,7 @@
     }
    ],
    "source": [
-    "expected_demands = [[11,56], [40], [], [2]]\n",
+    "expected_demands = [[18,56], [40], [], [2]]\n",
     "add_expectations(tanks_df, expected_demands)"
    ]
   },
@@ -773,7 +773,7 @@
     {
      "data": {
       "text/plain": [
-       "[2, 11, 40, 56]"
+       "[2, 56, 18, 40]"
       ]
      },
      "execution_count": 13,
@@ -782,7 +782,7 @@
     }
    ],
    "source": [
-    "demands = [11, 56, 40, 2]\n",
+    "demands = [18, 56, 40, 2]\n",
     "random.shuffle(demands) # Shuffle because placing them top down is what we expect. Shake it up.\n",
     "demands"
    ]
@@ -807,26 +807,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "88ddcb65",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "in method 'Solver_NumVar', argument 3 of type 'double'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtank_solve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtanks_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdemands\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mE:\\proj\\solver-tutorials\\orlab\\src\\orlab\\exercise6.py:23\u001b[39m, in \u001b[36mtank_solve\u001b[39m\u001b[34m(tanks_df, demands)\u001b[39m\n\u001b[32m     21\u001b[39m stranded_vars = {}\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m tank \u001b[38;5;129;01min\u001b[39;00m all_tanks:\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m     stranded_vars[tank] = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mNumVar\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtank_remaining\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtank\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mstranded_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mtank\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Constraint: Each demand must be placed exactly once.\u001b[39;00m\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m demand \u001b[38;5;129;01min\u001b[39;00m all_demands:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32me:\\proj\\solver-tutorials\\orlab\\.venv\\Lib\\site-packages\\ortools\\linear_solver\\pywraplp.py:188\u001b[39m, in \u001b[36mSolver.NumVar\u001b[39m\u001b[34m(self, lb, ub, name)\u001b[39m\n\u001b[32m    186\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mNumVar\u001b[39m(\u001b[38;5;28mself\u001b[39m, lb, ub, name):\n\u001b[32m    187\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"Creates a continuous variable.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m188\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_pywraplp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSolver_NumVar\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mub\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: in method 'Solver_NumVar', argument 3 of type 'double'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tank 0 placed [40] stranded_vars[tank]=35.0\n",
+      "tank 1 placed [18] stranded_vars[tank]=77.0\n",
+      "tank 2 placed [2] stranded_vars[tank]=13.0\n",
+      "tank 3 placed [56] stranded_vars[tank]=39.0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tank_solve(tanks_df, demands)"
+    "ok, result_df = tank_solve(tanks_df, demands)\n",
+    "ok"
    ]
   },
   {
@@ -859,6 +867,11 @@
        "      <th>capacity</th>\n",
        "      <th>max_level</th>\n",
        "      <th>current_level</th>\n",
+       "      <th>demands</th>\n",
+       "      <th>placed</th>\n",
+       "      <th>new_level</th>\n",
+       "      <th>stranded_var</th>\n",
+       "      <th>stranded</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -867,35 +880,61 @@
        "      <td>100</td>\n",
        "      <td>95</td>\n",
        "      <td>20</td>\n",
+       "      <td>[40]</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>100</td>\n",
        "      <td>95</td>\n",
        "      <td>0</td>\n",
+       "      <td>[18]</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>100</td>\n",
        "      <td>95</td>\n",
        "      <td>80</td>\n",
+       "      <td>[2]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>100</td>\n",
        "      <td>95</td>\n",
        "      <td>0</td>\n",
+       "      <td>[56]</td>\n",
+       "      <td>56</td>\n",
+       "      <td>56</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   capacity  max_level  current_level\n",
-       "0       100         95             20\n",
-       "1       100         95              0\n",
-       "2       100         95             80\n",
-       "3       100         95              0"
+       "   capacity  max_level  current_level demands  placed  new_level  \\\n",
+       "0       100         95             20    [40]      40         60   \n",
+       "1       100         95              0    [18]      18         18   \n",
+       "2       100         95             80     [2]       2         82   \n",
+       "3       100         95              0    [56]      56         56   \n",
+       "\n",
+       "   stranded_var  stranded  \n",
+       "0          35.0        35  \n",
+       "1          77.0        77  \n",
+       "2          13.0        13  \n",
+       "3          39.0        39  "
       ]
      },
      "execution_count": 15,
@@ -904,44 +943,155 @@
     }
    ],
    "source": [
-    "tanks_df"
+    "result_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c4f94c79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = tanks_df.max_level.astype(int) - tanks_df.current_level.astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "d9e4e177",
+   "execution_count": 16,
+   "id": "a91024f9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tank 0 placed [40] stranded_vars[tank]=35.0\n",
+      "tank 1 placed [18] stranded_vars[tank]=77.0\n",
+      "tank 2 placed [2] stranded_vars[tank]=13.0\n",
+      "tank 3 placed [56] stranded_vars[tank]=39.0\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>capacity</th>\n",
+       "      <th>max_level</th>\n",
+       "      <th>current_level</th>\n",
+       "      <th>demands</th>\n",
+       "      <th>placed</th>\n",
+       "      <th>new_level</th>\n",
+       "      <th>stranded_var</th>\n",
+       "      <th>stranded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>20</td>\n",
+       "      <td>[40]</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[18]</td>\n",
+       "      <td>18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>80</td>\n",
+       "      <td>[2]</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[56]</td>\n",
+       "      <td>56</td>\n",
+       "      <td>56</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "np.int64(95)"
+       "   capacity  max_level  current_level demands  placed  new_level  \\\n",
+       "0       100         95             20    [40]      40         60   \n",
+       "1       100         95              0    [18]      18         18   \n",
+       "2       100         95             80     [2]       2         82   \n",
+       "3       100         95              0    [56]      56         56   \n",
+       "\n",
+       "   stranded_var  stranded  \n",
+       "0          35.0        35  \n",
+       "1          77.0        77  \n",
+       "2          13.0        13  \n",
+       "3          39.0        39  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[1]"
+    "random.shuffle(demands)\n",
+    "ok, result_df = tank_solve(tanks_df, demands)\n",
+    "result_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1da7131f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[56, 40, 18, 2]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demands"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a91024f9",
+   "id": "8864a222",
    "metadata": {},
    "outputs": [],
    "source": []
