added tank problem description

--- a/orlab/docs/06-tank-utilization.ipynb
+++ b/orlab/docs/06-tank-utilization.ipynb
@@ -773,7 +773,7 @@
     {
      "data": {
       "text/plain": [
-       "[2, 56, 18, 40]"
+       "[40, 56, 2, 18]"
       ]
      },
      "execution_count": 13,
@@ -815,10 +815,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tank 0 placed [40] stranded_vars[tank]=35.0\n",
+      "tank 0 placed [56] stranded_vars[tank]=19.0\n",
       "tank 1 placed [18] stranded_vars[tank]=77.0\n",
       "tank 2 placed [2] stranded_vars[tank]=13.0\n",
-      "tank 3 placed [56] stranded_vars[tank]=39.0\n"
+      "tank 3 placed [40] stranded_vars[tank]=55.0\n"
      ]
     },
     {
@@ -880,11 +880,11 @@
        "      <td>100</td>\n",
        "      <td>95</td>\n",
        "      <td>20</td>\n",
-       "      <td>[40]</td>\n",
-       "      <td>40</td>\n",
-       "      <td>60</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>35</td>\n",
+       "      <td>[56]</td>\n",
+       "      <td>56</td>\n",
+       "      <td>76</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -913,11 +913,11 @@
        "      <td>100</td>\n",
        "      <td>95</td>\n",
        "      <td>0</td>\n",
-       "      <td>[56]</td>\n",
-       "      <td>56</td>\n",
-       "      <td>56</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>39</td>\n",
+       "      <td>[40]</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -925,16 +925,16 @@
       ],
       "text/plain": [
        "   capacity  max_level  current_level demands  placed  new_level  \\\n",
-       "0       100         95             20    [40]      40         60   \n",
+       "0       100         95             20    [56]      56         76   \n",
        "1       100         95              0    [18]      18         18   \n",
        "2       100         95             80     [2]       2         82   \n",
-       "3       100         95              0    [56]      56         56   \n",
+       "3       100         95              0    [40]      40         40   \n",
        "\n",
        "   stranded_var  stranded  \n",
-       "0          35.0        35  \n",
+       "0          19.0        19  \n",
        "1          77.0        77  \n",
        "2          13.0        13  \n",
-       "3          39.0        39  "
+       "3          55.0        55  "
       ]
      },
      "execution_count": 15,
@@ -1076,7 +1076,7 @@
     {
      "data": {
       "text/plain": [
-       "[56, 40, 18, 2]"
+       "[18, 56, 40, 2]"
       ]
      },
      "execution_count": 17,
@@ -1089,11 +1089,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "8864a222",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Can we optimize `remaining[tank] - x_vars[tank, demand] * qty[demand]` to minimize?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6812783",
+   "metadata": {},
    "source": []
   }
  ],
