--- a/orlab/docs/06-tank-utilization.ipynb
+++ b/orlab/docs/06-tank-utilization.ipynb
@@ -1250,11 +1250,161 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "79834424",
    "metadata": {},
+   "source": [
+    "## Try Solution C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7e76d03b",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "from orlab.exercise6c import tank_solve_c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b16a5d48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ok, result_df = tank_solve_c(tanks_df, demands)\n",
+    "ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9c791d41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>capacity</th>\n",
+       "      <th>max_level</th>\n",
+       "      <th>current_level</th>\n",
+       "      <th>demands</th>\n",
+       "      <th>placed</th>\n",
+       "      <th>new_level</th>\n",
+       "      <th>stranded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>20</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[18.0, 56.0, 2.0]</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>80</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[40.0]</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   capacity  max_level  current_level            demands  placed  new_level  \\\n",
+       "0       100         95             20                 []     0.0       20.0   \n",
+       "1       100         95              0  [18.0, 56.0, 2.0]    76.0       76.0   \n",
+       "2       100         95             80                 []     0.0       80.0   \n",
+       "3       100         95              0             [40.0]    40.0       40.0   \n",
+       "\n",
+       "   stranded  \n",
+       "0       0.0  \n",
+       "1      19.0  \n",
+       "2       0.0  \n",
+       "3      55.0  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aba3f52d",
+   "metadata": {},
+   "source": [
+    "This most definitely did not do what we hoped for."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0ff67d6",
+   "metadata": {},
    "source": []
   }
  ],
